Se refactoriza codigo para cumplir con buenas practicas, tener codigo limpio; se realiza el calculo de la capacidad residual del proponente dentro del módulo de empresa